# smokeless_flame

./: Cargo.toml  README.md
controller/: Cargo.toml
controller/src/: arg_parser.rs  filesystem.rs  main.rs  server.rs
controller/src/server/: c2_protocol.rs  c2_state.rs  cli.rs  dns.rs  encoding.rs
implant/: Cargo.toml
implant/src/: client.rs  filesystem.rs  main.rs
implants/esp32s3/: README.md
implants/esp32s3/main/: CMakeLists.txt  main.c
implants/general/: Cargo.toml
implants/general/src/: client.rs  main.rs
lib/: Cargo.toml
lib/src/: async_io.rs  encryption.rs  error.rs  lib.rs  protocol.rs
