[package]
name = "smokeless_flame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.13.0"
chrono = "0.4.38"
futures = "0.3.31"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "implant"
path = "src/implant/main.rs"
