[package]
name = "controller"
version = "0.1.0"
edition = "2021"

[dependencies]
lib = { path = "../lib" }

clap = { version = "4.5.49", features = ["derive"] }
fmt = "0.1.0"
smol = "2.0.2"

# Logging
env_logger = "0.11.8"
log = "0.4.28"

# Operating Systems
nix = { version = "0.30.1", features = ["fs"] }
winapi = { version = "0.3.9", features = ["fileapi", "winbase"], optional = true }
chrono = "0.4.42"
bincode = "2.0.1"

