[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[dependencies]

# Encryption
aes-gcm = "0.10.3"
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
hkdf = "0.12.4"
rand = "0.9.2"
sha2 = "0.10.9"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }

# Protocol
bincode = "2.0.1"
thiserror = "2.0.17"
ctrlc = "3.5.0"
smol = "2.0.2"
futures-lite = "2.6.1"
