[package]
name = "implant"
version = "0.1.0"
edition = "2021"

[dependencies]
smol = "2.0.2"

lib = { path = "../../lib" }
bincode = "2.0.1"
futures-lite = "2.6.1"
log = "0.4.28"
chrono = "0.4.42"
clap = { version = "4.5.49", features = ["derive"] }
env_logger = "0.11.8"
async-process = "2.5.0"
nix = { version = "0.30.1", features = ["fs"] }
